# ALICE-Agent

./: .gitignore  Cargo.toml  README.md
data/: tool_calling_examples.jsonl  world_model_training.jsonl  world_model_training_full.jsonl
scripts/: extract_world_model_data.py
src/: config.rs  context.rs  hf_download.rs  lib.rs  main.rs  permission.rs
src/conversation/: message.rs  mod.rs  prompt.rs  session.rs
src/mcp/: mod.rs  transport.rs
src/provider/: local.rs  mod.rs  openai.rs
src/tools/: bash.rs  edit_file.rs  glob.rs  grep.rs  mod.rs  read_file.rs  write_file.rs
src/tui/: mod.rs  repl.rs  stream.rs
